<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/radio_border"
        android:id="@+id/group_filter">
        <RadioButton
            android:checked="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/MyRadioButtonLeft"
            android:text="@string/table_song_arirang"
            android:id="@+id/radio_table_arirang"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/MyRadioButton"
            android:text="@string/table_song_music"
            android:id="@+id/radio_table_misic"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/MyRadioButton"
            android:text="@string/table_song_california"
            android:id="@+id/radio_table_california"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/MyRadioButton"
            android:text="@string/table_song_vietktv"
            android:id="@+id/radio_table_vietktv"/>
    </RadioGroup>
</LinearLayout>