<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/parentContent"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_layout">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <com.github.ksoichiro.android.observablescrollview.ObservableScrollView
            android:id="@+id/scroll"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="180.0dip"
                    android:background="@drawable/style_music">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10.0dip"
                        android:orientation="vertical">

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="50.0dip"
                            android:background="@android:color/transparent" />

                        <TextView
                            android:id="@+id/tv_detail_id"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="-15.0dip"
                            android:gravity="center"
                            android:text="6030034"
                            android:textColor="@android:color/white"
                            android:textSize="25.0sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_detail_songName"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="3.0dip"
                            android:text="Tên bài Hát"
                            android:gravity="center"
                            android:textColor="@android:color/white"
                            android:textSize="18.0sp" />

                        <TextView
                            android:id="@+id/tv_detail_author"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@android:color/white"
                            android:textSize="18.0sp"
                            android:text="Tên Tác Giả"/>

                        <TextView
                            android:id="@+id/tv_detail_vol"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@android:color/white"
                            android:textSize="18.0sp"
                            android:text="Arirang - Vol 60"/>
                    </LinearLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5.0dip">

                    <LinearLayout
                        android:id="@+id/rl_detail_watch"
                        android:layout_width="fill_parent"
                        android:layout_height="45.0dip"
                        android:layout_marginRight="5.0dip"
                        android:layout_weight="1.0"
                        android:background="@drawable/sel_btn_detail_red"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="5.0dip">

                        <ImageView
                            android:layout_width="30.0dip"
                            android:layout_height="30.0dip"
                            android:clickable="false"
                            android:src="@drawable/icon_video" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="5.0dip"
                            android:singleLine="true"
                            android:text="@string/text_detail_watch_video"
                            android:textColor="@android:color/white"
                            android:textSize="14.0sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/rl_detail_share"
                        android:layout_width="fill_parent"
                        android:layout_height="45.0dip"
                        android:layout_marginLeft="5.0dip"
                        android:layout_weight="1.0"
                        android:background="@drawable/sel_btn_detail_blue"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="5.0dip">

                        <ImageView
                            android:layout_width="30.0dip"
                            android:layout_height="30.0dip"
                            android:clickable="false"
                            android:src="@drawable/icon_share_btn_new" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="5.0dip"
                            android:singleLine="true"
                            android:text="@string/text_detail_share"
                            android:textColor="@android:color/white"
                            android:textSize="14.0sp" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="10.0dip"
                    android:background="@color/bg_layout" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10.0dip"
                    android:layout_marginTop="10.0dip"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="10.0dip"
                        android:layout_marginLeft="10.0dip"

                        android:singleLine="true"
                        android:text="@string/songlyric"
                        android:textColor="@color/text_blue"
                        android:textSize="16.0sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_detail_lyric"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10.0dip"
                        android:layout_marginRight="10.0dip"
                        android:textColor="@color/co_text_nomal_gray"
                        android:textSize="14.0sp" />
                </LinearLayout>

                <!-- recycleView data-->
                <LinearLayout
                    android:id="@+id/ll_suggest_song"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="30.0dip"
                    >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="5.0dip"
                        android:layout_marginLeft="10.0dip"
                        android:singleLine="true"
                        android:text="@string/text_song_suggest"
                        android:textColor="@color/text_blue"
                        android:textSize="16.0sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1.0px"
                        android:layout_marginLeft="10.0dip"
                        android:layout_marginRight="10.0dip"
                        android:background="#80818c8e" />
                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/list_suggest_song"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="10.0dip"
                    android:paddingRight="10.0dip" />
            </LinearLayout>
        </com.github.ksoichiro.android.observablescrollview.ObservableScrollView>

        <RelativeLayout
            android:id="@+id/rl_action_bar"
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/btn_detail_back"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:paddingRight="20.0dip">

                <ImageView
                    android:id="@+id/img_detail_goBack"
                    android:layout_width="36.0dip"
                    android:layout_height="36.0dip"
                    android:layout_centerVertical="true"
                    android:padding="5.0dip"
                    android:src="@drawable/icon_back" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_like"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:paddingLeft="20.0dip">

                <CheckBox
                    android:layout_width="36.0dip"
                    android:layout_height="36.0dip"
                    android:layout_centerVertical="true"
                    android:padding="5.0dip"
                    android:id="@+id/checkBox_detail_favorite"
                    android:button="@drawable/sel_btn_detail_like" />
            </RelativeLayout>
        </RelativeLayout>
    </FrameLayout>
</RelativeLayout>